# py_my_settings

./: README.md
Settings/: Readme.md  main_Settings.py  pyproject.toml
Settings/mysettings/: mysettings.py  settings.py
my_settings/: my_settings.py
