#https://github.com/pypa/sampleproject/blob/main/pyproject.toml
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "my-settings"
version = "1.0.0"
authors = [
    {name = "Giuseppe Patti", email = "giuseppepatti882@gmail.com"},
]
description = "An easy settings generator for various python applications"
readme = "Readme.md"
requires-python = ">=3.8"
keywords = ["Settings", "generator"]
license = {text = "BSD-3-Clause"}
#classifiers = [
#    "Framework :: Django",
#    "Programming Language :: Python :: 3",
#]
dependencies = [
    "pandas"

]
#to execute the function main from the package when invoked
#[project.scripts]
#sample = "toml_example.main:main"
